--- a/JADE_SMA_Commercial/myLogging.properties
+++ b/JADE_SMA_Commercial/myLogging.properties
@@ -36,7 +36,7 @@ sma.agent.level=ALL
 
 # --- ConsoleHandler ---
 # Override of global logging level
-#java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=INFO
 #java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.formatter=sma.tools.logging.SMAConsoleFormatter
 
