--- a/JADE_SMA_Commercial/myLogging.properties
+++ b/JADE_SMA_Commercial/myLogging.properties
@@ -36,7 +36,7 @@ sma.agent.level=ALL
 
 # --- ConsoleHandler ---
 # Override of global logging level
-java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=ALL
 #java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.formatter=sma.tools.logging.SMAConsoleFormatter
 
@@ -47,14 +47,14 @@ java.util.logging.FileHandler.level=INFO
 # Naming style for the output file:
 # (The output file is placed in the directory
 # defined by the "user.home" System property.)
-java.util.logging.FileHandler.pattern=./log/java%u.log
+java.util.logging.FileHandler.pattern=./log/Sim-%g-%u.log
 
 # Limiting size of output file in bytes:
-java.util.logging.FileHandler.limit=50000
+java.util.logging.FileHandler.limit=1000000
 
 # Number of output files to cycle through, by appending an
 # integer to the base file name:
-java.util.logging.FileHandler.count=3
+java.util.logging.FileHandler.count=5
 
 # Style of output (Simple or XML):
 java.util.logging.FileHandler.formatter=sma.tools.logging.SMAFileFormatter
